added some methods
